<resources>
    <string name="app_name">Android Chat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="welcome">Welcome!</string>
    <string name="intro_text">To start messaging swipe from the left and click on contacts.</string>

    <!-- Starting screen -->
    <string name="registered">Are you registered already?</string>
    <string name="yournick">Your nick</string>
    <string name="repeat_phone">Repeat your phone number</string>
    <string name="yourphone">Enter your phone number</string>
    <string name="register">Register</string>
    <string name="enter">Enter</string>
    <string name="welcome_start">Welcome</string>
    <string name="incorrect_number">Incorrect number</string>

    <!-- Preferences -->
    <string name="summary_yournick">Enter your nick</string>
    <string name="yourphone_pref">Your phone number</string>
    <string name="summary_yourphone">Click to see it</string>
    <string name="yourstatus_pref">Your status</string>
    <string name="summary_yourstatus">Type your status</string>
    <string name="user">User</string>
    <string name="message_not">Message notifications</string>
    <string name="group_not">Group notifications</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="message_sound">Message notification tone</string>
    <string name="group_sound">Group notification tone</string>

    <!-- Actions -->
    <string name="action_newChat">New Chat</string>
    <string name="action_search">Search</string>
    <string name="action_newGroup">New Group</string>
    <string name="action_groups">Groups</string>
    <string name="action_attach">Attach</string>
    <string name="action_chats">Chats</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_settings">Preferences</string>

    <!-- Strings related to Settings -->
    <string name="settings_profile">Profile</string>
    <string name="settings_settings">Settings</string>

    <!-- Chat -->
    <string name="chat_send">Send</string>
    <string name="chat_hint">Type a message</string>
    <string name="attach_location">My location</string>
    <string name="attach">Attach</string>
    <string name="gps_off">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="gps_disabled">Can not connect to GPS.</string>

    <!-- Strings related to Images -->
    <string name="uploading">Uploading…</string>
    <string name="please_wait">Please wait</string>
    <string name="image_success">Image uploaded</string>
    <string name="image_fail">Please wait</string>

    <!-- Strings related to Maps -->
    <string name="map_change">Change map style</string>
    <string name="map_target">Friend position</string>
    <string name="map_mine">My position</string>

    <string name="contacts">My contacts</string>
    <string name="chats">Chats</string>
    <string name="groups">My groups</string>
    <string name="title_activity_chat">Chat Activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_group">Create group</string>
    <string name="create_hint">Type the group name</string>
    <string name="add_people">Add people to this chat</string>
    <string name="invite">Invite</string>
    <string name="group_created">Group created</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
