<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:title="Chats">
            <menu>
                <item
                        android:id="@+id/nav_contacts"
                        android:icon="@drawable/ic_contacts"
                        android:title="@string/action_contacts"/>

                <item
                        android:id="@+id/nav_chats"
                        android:icon="@drawable/ic_chats"
                        android:title="@string/action_chats"/>

                <item
                    android:id="@+id/nav_groups"
                    android:icon="@drawable/ic_groups"
                    android:title="@string/action_groups"/>

                <item
                        android:id="@+id/nav_newGroup"
                        android:icon="@drawable/ic_new_group"
                        android:title="@string/action_newGroup"/>
            </menu>
        </item>

        <item
            android:title="User">
            <menu>
                <item
                        android:id="@+id/nav_settings"
                        android:icon="@android:drawable/ic_menu_preferences"
                        android:title="@string/settings_settings"/>
            </menu>
        </item>
    </group>

</menu>