<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="com.jabravo.android_chat.StartUpActivity">

<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_start"
        android:id="@+id/textWelcome"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="50dp"/>

<EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone1"
        android:inputType="phone"
        android:hint="Ej: 690123456"
        android:layout_below="@+id/textPhone"
        android:layout_alignLeft="@+id/switch1"
        android:layout_alignStart="@+id/switch1"
        android:layout_alignRight="@+id/textRepeatPhone"
        android:layout_alignEnd="@+id/textRepeatPhone"/>

<EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone2"
        android:inputType="phone"
        android:hint="Ej: 690123456"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textRepeatPhone"
        android:layout_alignStart="@+id/textRepeatPhone"
        android:layout_alignRight="@+id/textRepeatPhone"
        android:layout_alignEnd="@+id/textRepeatPhone"/>

<EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nick"
        android:layout_below="@+id/textNick"
        android:layout_alignLeft="@+id/phone2"
        android:layout_alignStart="@+id/phone2"
        android:layout_alignRight="@+id/phone2"
        android:layout_alignEnd="@+id/phone2"/>

<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:id="@+id/registerButton"
        android:layout_below="@+id/nick"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:paddingLeft="20px"
        android:paddingRight="10px"
        android:textColor="@drawable/button_text"
        android:background="@drawable/button_rounded2"
        android:drawableRight="@drawable/ic_send"/>


<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/yourphone"
        android:id="@+id/textPhone"
        android:layout_below="@+id/textWelcome"
        android:layout_alignLeft="@+id/phone1"
        android:layout_alignStart="@+id/phone1"/>

<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/repeat_phone"
        android:id="@+id/textRepeatPhone"
        android:layout_above="@+id/phone2"
        android:layout_alignLeft="@+id/switch1"
        android:layout_alignStart="@+id/switch1"/>

<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/yournick"
        android:id="@+id/textNick"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/phone2"
        android:layout_centerHorizontal="true"/>

<Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registered"
        android:id="@+id/switch1"
        android:layout_below="@+id/phone1"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
