<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/mapLayout"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical|center_horizontal"
        android:background="@color/background">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="@string/map_change"
            android:id="@+id/map_style"
            android:textColor="@drawable/button_text"
            android:background="@drawable/button_rounded2"
            android:layout_marginRight="10dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="@string/map_target"
            android:id="@+id/map_target"
            android:textColor="@drawable/button_text"
            android:background="@drawable/button_rounded2"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="@string/map_mine"
            android:id="@+id/map_me"
            android:textColor="@drawable/button_text"
            android:background="@drawable/button_rounded2"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <fragment android:id="@+id/map"
              android:name="com.google.android.gms.maps.SupportMapFragment"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:map="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.jabravo.android_chat.MapsActivity"
        />

</LinearLayout>